# atcoder-tournament

./: .gitignore  Cargo.toml  Dockerfile  README.md  config-overrides.js  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: bracket_generator.rs  constructor.rs  formatter.rs  io.rs  lib.rs  resolver.rs  types.rs
cli/src/common/: construct_season_3.rs  mod.rs  rating_storage.rs
docs/: CNAME  asset-manifest.json  battle_records.json  bracket-1.json  bracket-10.json  bracket-11.json  bracket-12.json  bracket-2.json  bracket-3.json  bracket-4.json  bracket-5.json  bracket-6.json  bracket-7.json  bracket-8.json  bracket-9.json  histories.json  index.html  precache-manifest.000569cc69cf5678150bd9a66dadc920.js  precache-manifest.000d86f4aeb544026eb8a7be1cdddf00.js  precache-manifest.0201feba3b36af2a08103f05f97b441a.js  precache-manifest.02135e146a7f47fce2abbf143ec3ed64.js  precache-manifest.022a7def092dcbb09be381e7fce49164.js  precache-manifest.065e99bdb190b45b35f9e9bb002e9973.js  precache-manifest.06d081948d326e37a8ee56f5590c607b.js  precache-manifest.07ee98c29bc97f84281dbb58d8688b23.js  precache-manifest.0c82ee50eebed7dda900cb57bfc2b555.js  precache-manifest.1312a85b2082583943c7ec7025c0def2.js  precache-manifest.14308493915a53de17dd7b9bd7b3d640.js  precache-manifest.14e20aece57ee43e727b17dfff3b59e4.js  precache-manifest.16cf102663e34409aa0125e6503aacf7.js  precache-manifest.18ef7a75d6c5bf04682fd97c7321e7b8.js  precache-manifest.19d87c28cb0dcbb0a60ac8a1b856af8c.js  precache-manifest.1bffb53c46f617858d69faaa4f4640c3.js  precache-manifest.1d1c62bdcb13ae167b3bf3ba1133e6f6.js  precache-manifest.1e0a490593e04878f84563404475ef49.js  precache-manifest.20736074ed7b62bfd935ee1766ffbb76.js  precache-manifest.20be1eedc207d93e4a5ecc4275980149.js  precache-manifest.2673b9401995a43d92e61f7c8094e1c4.js  precache-manifest.26b2273be5330736715f2f95eaebf3d2.js  precache-manifest.27a0f4c00300fc042428529c09c91aef.js  (+97 more)
public/: battle_records.json  bracket-1.json  bracket-10.json  bracket-11.json  bracket-12.json  bracket-2.json  bracket-3.json  bracket-4.json  bracket-5.json  bracket-6.json  bracket-7.json  bracket-8.json  bracket-9.json  histories.json  index.html  ratings.json  tournaments.json  users-1.json
rating-downloader/: Cargo.toml
rating-downloader/src/: main.rs
rules/: ABCトーナメントルール（第1期）.md  ABCトーナメントルール（第2期〜）.md  ABCトーナメントルール（第2期）.md  ABCトーナメントルール（第3期〜）.md  ABCトーナメントルール（第3期・第4期）.md  ABCトーナメントルール（第5期）.md  ABCトーナメントルール（第6期〜）.md  ABCトーナメントルール（第6期）.md  (+3 more)
server/: Cargo.toml  db-schema.sql  docker-compose.yml
server/src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  scraping.rs
src/: App.tsx  (+3 more)
tournament-tools/: Cargo.toml
tournament-tools/src/: bracket.rs  config.rs  construct.rs  io.rs  league.rs  lib.rs  rating.rs  standings.rs  types.rs
tournament-tools/tests/: construct_test.rs  update_test.rs
tournament-tools/tests/assets/: bracket-5-after.json  bracket-5-construct.json
(+521 files in other folders)
