[package]
name = "cli"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12.0"
reqwest = { version="0.10.8", features = ["gzip"] }
tokio = { version="0.2.22", features=["rt-threaded", "macros"] }
