[package]
name = "rating-downloader"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["gzip"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
