[package]
name = "server"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = "3.2.0"
anyhow = "1.0.34"
sqlx = { version = "0.3.5", features = ["postgres"] }
serde = { version = "1.0.117", features = ["derive"] }
reqwest = { version = "0.10.8", features = ["json"] }
serde_json = "1.0.59"
env_logger = "0.8.1"
log = "0.4.11"
