[package]
name = "server"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = "4.0.0-beta.9"
anyhow = "1.0.34"
sqlx = { version = "0.5.1", features = [
    "postgres",
    "runtime-async-std-rustls",
] }
serde = { version = "1.0.117", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.59"
env_logger = "0.8.1"
log = "0.4.11"
rand = "0.8.4"
scraper = "0.12.0"
bcrypt = "0.10.1"
actix-cors = "0.6.0-beta.2"
openssl-sys = "0.9.73"
openssl = "0.10.40"
