[package]
name = "server"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = "4.2"
anyhow = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-rustls"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
scraper = "0.14"
bcrypt = "0.13"
actix-cors = "0.6"
