[package]
name = "tournament-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version="0.7.3", optional=true }

[features]
default = []
league_matching = ["rand"]
